--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.0",
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
+    "ms": "^2.1.3",
     "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-infinite-scroll-component": "6.1"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
